--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mi-primera-app",
+  "name": "react-fundamentals-workshop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-scripts": "5.0.1",
+    "sass": "^1.97.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
